2011-12-06  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/text/recognition.hh: Restore previous locale.

2011-12-06  Guillaume Lazzara  <z@lrde.epita.fr>

	Ensure current locale is C while calling Tesseract.

	* demo/viewer/main.cc: Move call to setLocale...
	* scribo/text/recognition.hh: ... Here.

2011-11-16  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/text/recognition.hh: Fix code for Tesseract 3.01
	compatibility.

2012-09-26  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/src/content_in_doc.cc: Add more debug images.

2012-09-14  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/debug/logger.hh: Fix attributes initialization order.

2012-09-07  Guillaume Lazzara  <z@lrde.epita.fr>

 	Take OCR confidence into account in HTML reconstruction.

	* demo/xml2doc/templates/html/main.xsl,
	* demo/xml2doc/templates/html/main_base64.xsl: Here.

2012-09-07  Guillaume Lazzara  <z@lrde.epita.fr>

	* src/afp/components.hh: Rename index_of_point to offset_of_point.

2012-09-07  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/debug/logger.hh: Add missing inline keywords.

2012-09-07  Guillaume Lazzara  <z@lrde.epita.fr>

	Take OCR confidence into account in document reconstruction.

	* demo/xml2doc/templates/pdf/line.xsl: Do not print lines with
	confidence < 60%.

	* scribo/core/line_info.hh: Add access to text confidence.

	* scribo/io/xml/internal/extended_page_xml_visitor.hh,
	* scribo/io/xml/internal/full_xml_visitor.hh: Save text confidence.

	* scribo/io/xml/load.hh: Load text confidence.

2012-05-11  Guillaume Lazzara  <z@lrde.epita.fr>

	Rename point_at_index, delta_index and index_of_point.

	* scribo/binarization/sauvola_ms.hh,
	* scribo/canvas/integral_browsing.hh,
	* scribo/draw/line_components.hh,
	* scribo/filter/object_groups_with_holes.hh,
	* scribo/filter/objects_with_holes.hh,
	* scribo/postprocessing/fill_object_holes.hh,
	* scribo/preprocessing/rotate_90.hh,
	* scribo/primitive/extract/internal/union.hh,